// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointsCounter renders with a value  1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#fff",
        "fontSize": 65,
        "fontWeight": "bold",
      }
    }
  >
    20
  </Text>
</View>
`;

exports[`PointsCounter renders with no props  1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#fff",
        "fontSize": 65,
        "fontWeight": "bold",
      }
    }
  />
</View>
`;
